<resources>
    <string name="app_name">UI-proyecto-integrador</string>
    <string name="list_layout">Lista de productos</string>
    <string name="back_button">Regresar</string>
    <string name="add_product">Agregar Producto</string>
    <string name="app_cafe">Cafeteria App</string>
    <string name="product_name">Nombre</string>
    <string name="price">Precio</string>
    <string name="todo">Logo cafeteria, taza de cafe</string>
    <string name="delete_product">Eliminar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>