<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/app_cafe"
        android:textColor="@color/primary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="80sp"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_coffee_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/add_product"
        android:textAllCaps="true"
        android:textColor="@color/primary_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/product_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/add_product"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonListProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/list_layout"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>